--- a/DBlib/nbproject/project.properties
+++ b/DBlib/nbproject/project.properties
@@ -24,13 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Chat_client.jar
+dist.jar=${dist.dir}/DbLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${reference.NetLib.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,13 +54,9 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=chat.client.Application
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.NetLib=../NetLib
-reference.NetLib.jar=${project.NetLib}/dist/NetLib.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
