--- a/Shop/nbproject/project.properties
+++ b/Shop/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Shop
+application.vendor=kuzha
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,13 +25,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Chat_client.jar
+dist.jar=${dist.dir}/Shop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.NetLib.jar}
+    ${reference.GUI.jar}:\
+    ${reference.DbLib.jar}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,13 +59,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=chat.client.Application
+main.class=shop.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.NetLib=../NetLib
-reference.NetLib.jar=${project.NetLib}/dist/NetLib.jar
+project.DbLib=../DBlib
+project.GUI=../GUI
+reference.DbLib.jar=${project.DbLib}/dist/DbLib.jar
+reference.GUI.jar=${project.GUI}/dist/GUI.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
