Добавлена возможность записывать в базу

--- a/NetLib/nbproject/project.properties
+++ b/NetLib/nbproject/project.properties
@@ -29,7 +29,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.Shop.jar}:\
+    ${reference.GUI.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +58,11 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK1.8
+project.GUI=../GUI
+project.Shop=../Shop
+reference.GUI.jar=${project.GUI}/dist/GUI.jar
+reference.Shop.jar=${project.Shop}/dist/Shop.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
