--- a/Shop/nbproject/project.properties
+++ b/Shop/nbproject/project.properties
@@ -63,7 +63,7 @@ main.class=shop.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK1.8
 project.DbLib=../DBlib
 project.GUI=../GUI
 reference.DbLib.jar=${project.DbLib}/dist/DbLib.jar
