--- a/Chat server/nbproject/project.properties
+++ b/Chat server/nbproject/project.properties
@@ -59,7 +59,7 @@ main.class=chat.server.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK1.8
 project.NetLib=../NetLib
 reference.NetLib.jar=${project.NetLib}/dist/NetLib.jar
 run.classpath=\
