--- a/GUI/nbproject/project.properties
+++ b/GUI/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=default_platform
+platform.active=JDK1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
