--- a/NetLib/nbproject/project.properties
+++ b/NetLib/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=NetLib
+application.vendor=kuzha
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,13 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/NetLib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Shop.jar}:\
+    ${reference.DbLib.jar}:\
     ${reference.GUI.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -58,9 +61,11 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=JDK1.8
+platform.active=default_platform
+project.DbLib=../DBlib
 project.GUI=../GUI
 project.Shop=../Shop
+reference.DbLib.jar=${project.DbLib}/dist/DbLib.jar
 reference.GUI.jar=${project.GUI}/dist/GUI.jar
 reference.Shop.jar=${project.Shop}/dist/Shop.jar
 run.classpath=\
