--- a/Chat client/nbproject/project.properties
+++ b/Chat client/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Chat client
+application.vendor=kuzha
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Chat_client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.NetLib.jar}
+    ${reference.NetLib.jar}:\
+    ${reference.Shop.jar}:\
+    ${reference.DbLib.jar}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,9 +64,13 @@ main.class=chat.client.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK1.8
+platform.active=default_platform
+project.DbLib=../DBlib
 project.NetLib=../NetLib
+project.Shop=../Shop
+reference.DbLib.jar=${project.DbLib}/dist/DbLib.jar
 reference.NetLib.jar=${project.NetLib}/dist/NetLib.jar
+reference.Shop.jar=${project.Shop}/dist/Shop.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
