Ошибка при отправке arrayList

--- a/Chat server/nbproject/project.properties
+++ b/Chat server/nbproject/project.properties
@@ -32,7 +32,11 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.NetLib.jar}
+    ${reference.NetLib.jar}:\
+    ${reference.Shop.jar}:\
+    ${reference.DbLib.jar}:\
+    ${reference.GUI.jar}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +66,14 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.DbLib=../DBlib
+project.GUI=../GUI
 project.NetLib=../NetLib
+project.Shop=../Shop
+reference.DbLib.jar=${project.DbLib}/dist/DbLib.jar
+reference.GUI.jar=${project.GUI}/dist/GUI.jar
 reference.NetLib.jar=${project.NetLib}/dist/NetLib.jar
+reference.Shop.jar=${project.Shop}/dist/Shop.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
